--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
         {{>header}}
 
         <div class="main-content">
+            <p>This site was created by Gerardo Ramírez. It uses data from mapbox.com and darksky.net.</p>
             <img class="photo" src="img/robot.png" alt="Robot">
         </div>
         
